--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ tqdm
 git+https://github.com/openai/CLIP.git
 numpy
 torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+timm
+einops
+flash_attn
+plotly
